--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <!--        </dependency>-->
 
 
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -73,6 +74,10 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
+
+<!--        Newly Added-->
+
+
     </dependencies>
 
     <build>
